Compucom CCQA Org 100919/src/objects/Fcst_BaseLine_Error_Log__c.object
<CustomObject>
    <fields>
        <fullName>ErrorMsg__c</fullName>
        <label>ErrorMsg</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fcst_Account__c</fullName>
        <label>Fcst Account</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fcst_Amount__c</fullName>
        <label>Fcst Amount</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fcst_Baseline_year__c</fullName>
        <label>Fcst Baseline year</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fcst_Contract_Description__c</fullName>
        <label>Fcst Contract Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fcst_Contract__c</fullName>
        <label>Fcst Contract#</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fcst_Cost_Center__c</fullName>
        <label>Fcst Cost Center</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fcst_Fiscal_Year__c</fullName>
        <label>Fcst  Fiscal Year</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fcst_LineItem__c</fullName>
        <label>Fcst LineItem</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fcst_Line_Description__c</fullName>
        <label>Fcst Line Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fcst_Month__c</fullName>
        <label>Fcst Month</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fcst_Year__c</fullName>
        <label>Fcst Year</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fcst_planning_version__c</fullName>
        <label>Fcst Planning Version</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>FCST BaseLine Error Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>B-{0000}</displayFormat>
        <label>F Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FCST BaseLine Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>